# trading-tools

./: LICENSE  README.md  Untitled.ipynb  backtest.ipynb  config.py  docker-compose.yml  portfolio.ipynb  pyproject.toml  requirements.txt  setup.cfg  tinkoff.ipynb  tinkoff.py
app/: backtesting.py  config.py  indicators.py  market.py  models.py  schemas.py  tinkoff.py  trading.py  utils.py  yfinance_draft.py
migrations/models/: 0_20201024181823_init.json  0_20201024184257_init.json
