[tool.poetry]
name = "trading"
version = "0.1.0"
description = "Tools for trading automation"
authors = ["<ruthus18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tortoise-orm = "^0.16.17"
asyncpg = "^0.21.0"
aerich = "^0.3.2"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
