[tool.poetry]
name = "trading"
version = "0.1.0"
description = "Tools for trading automation"
authors = ["Danil Tryapchev <ruthus18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tortoise-orm = "^0.16.17"
asyncpg = "^0.21.0"
aerich = "^0.3.2"
pydantic = "^1.6.1"
websocket_client = "^0.57.0"
requests = "^2.24.0"
pytz = "^2020.1"
environs = "^8.0.0"
tqdm = "^4.50.2"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
jupyterlab = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
